# urdunlp

./: .gitignore  README.md  __init__.py  pyproject.toml  segmenter.py  test_urdunlp.py
.github/workflows/: ci.yml  main.yml
urdunlp/: evaluate.py
